--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
 /* Тут пиши основные стили */
+p {
+    font-family: Georgia, Cambria, "Times New Roman", Times, serif
+}
 
+h1-h6 {
+    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif
+}
+
+code {
+    font-family: "Courier New", monospace;
+}
 
 @media (max-width: 800px) {
 /* Тут пиши стили для мобилки.
