--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,35 @@
 /* Тут пиши основные стили */
-p {
-    font-family: Georgia, Cambria, "Times New Roman", Times, serif
-}
 
-h1-h6 {
-    font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif
+* {
+    width: 700px;
 }
 
 code {
     font-family: "Courier New", monospace;
+}
+
+h1 {
+    font-family: LucidaGrande-Bold;
+    font-size:42px;
+    color:rgba(0,0,0,0.84);
+    text-align:left;
+    line-height:44px;
+}
+
+h2 {
+    font-family:LucidaGrande-Bold;
+    font-size:34px;
+    color:rgba(0,0,0,0.84);
+    text-align:left;
+    line-height:39px;
+}
+
+p {
+    font-family:Georgia;
+    font-size:21px;
+    color:rgba(0,0,0,0.84);
+    text-align:left;
+    line-height:33px;
 }
 
 @media (max-width: 800px) {
